--- a/server/package.json
+++ b/server/package.json
@@ -30,9 +30,11 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
+    "mongoose-unique-validator": "^5.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "slugify": "^1.6.6",
     "validator": "^13.12.0"
   }
 }
